# QtMyCAD

./: QtMyCAD.sln
PythonCPPTest/: PythonCPPTest.cpp  PythonCPPTest.vcxproj  PythonCPPTest.vcxproj.filters
QtGPUTest/: QtGPUTest.cpp  QtGPUTest.h  QtGPUTest.qrc  QtGPUTest.ui  QtGPUTest.vcxproj  QtGPUTest.vcxproj.filters  main.cpp
QtMyCAD/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  OpenGLWidget.cpp  OpenGLWidget.h  QtMyCAD.qrc  QtMyCAD.ui  QtMyCAD.vcxproj  QtMyCAD.vcxproj.filters  main.cpp
QtTest/: QtTest.cpp  QtTest.h  QtTest.ui  QtTest.vcxproj  QtTest.vcxproj.filters  main.cpp
TIM/: TIM.cpp  TIM.h  TIM.qrc  TIM.ui  TIM.vcxproj  TIM.vcxproj.filters  main.cpp
TestGPU/: TestGPU.cpp  TestGPU.vcxproj  TestGPU.vcxproj.filters
mod/: Readme.txt
mod/Railway2/: Init.py  InitGui.py
